...
                android:minWidth="200dp"
                android:text="@string/visitante"
                android:textColorHighlight="#2196F3"
                android:textColorLink="#03A9F4" />

            <Button
                android:id="@+id/buttonCollector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:backgroundTint="#01579B"
...
